# SQLModelPlayGround

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  run_dev.bat
.serena/memories/: session-handover-next-steps.md  sqlmodel-kurs-fortschritt.md
app/: __init__.py  check_db.py  create_performance_testdata.py  create_testdata.py  database.py  init_db.py  main.py  reset_db.py
app/api/: __init__.py
app/api/routes/: __init__.py  posts.py  users.py
app/core/: config.py
app/models/: __init__.py  post.py  product.py  user.py
