[project]
name = "sqlmodel-playground"
version = "0.1.0"
description = "Learning SqlModel with PostgreSQL and FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "sqlmodel>=0.0.14",
    "psycopg2-binary>=2.9.9",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "httpx>=0.26.0",
    "pytest-asyncio>=0.23.0",
]
