[project]
name = "sqlmodel-playground"
version = "0.1.0"
description = "Learning SqlModel with PostgreSQL and FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "sqlmodel",
    "psycopg2-binary",
    "uvicorn[standard]",
    "pydantic-settings",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "httpx",
    "pytest-asyncio",
]
